@@ -2,8 +2,8 @@ AUX ardour-2.0.3-sndfile-external.patch 1409 SHA256 71542baed4deeae9505107973361
 AUX ardour-2.4-cflags.patch 1199 SHA256 ba59b111d4d93081aa743793d3307e18c6a06560e1500c3700ee0930df7f2f5b SHA512 4d1b6393c61fdd254b8c8e3b0c24a41ea453935ec6fe12b94039606720e4549099ec13ea6860fc614b295af56c19de43f7bc30a3562ef3e788256f9572114b0c WHIRLPOOL 5d38af6b047772f8d648654fffee7111c168c7007f5f71474e495ef050cd3e048eecc1ddc8a75b10e732ab62ff236b174c50766ba7d44a86442f2c9c1d12d810
 AUX ardour-2.7.1-gcc44.patch 1418 SHA256 4473008fcec6d619301202ff6d12024eb08653e54986c42dbeba57e581e88944 SHA512 8e25de0636843eb79c4d79b7d02a783c104ab4adf8396f825c6980a0b53c2b5feb4b92aa7e93b3b1406f0c6e07d4e9f6cc6cdf9ed88ca7c9cc32979a9fa90c4d WHIRLPOOL 18e44fd47cdc3f462aaa37aa164b48ea526036790648f5acd9c900fb0ea8ad829800d85bba390ed06f6d329b166efd10681d8720dd7daf9b2deb90f7dfacf741
 DIST ardour-2.8.11.tar.bz2 3322518 SHA256 6a743f42b795bb66179dd467c9b8e417e99d38fa915159155dd582709b563b73
-EBUILD ardour-2.8.11.ebuild 3985 SHA256 53fa87aaa2d862c60aba684e3f6caf03fd4645645d19cb7a70c8904f566de395 SHA512 5350b4a2f13dddb4f6e526eea93fe90ca4a7a9da6f66f20447ac717fd6733648f0c6d6bf4d816ee5b7ad1dfe26cd9213dcba14ecd723727dec629adc8a12b79e WHIRLPOOL ef6fecadf109afeb537d184f64e3baf72d0ae6c6a5ce419d6ac3b952f11bd49354be6a786eb32b4303d61cba3860de7d1f60c61defbe0b6bb92bd9a02f037abf
-EBUILD ardour-2.9999.ebuild 4014 SHA256 2bcd464a3ad3e9673ff958f9ad27a37621449893620686d2a32a2694929a412f SHA512 d05f4ab09ba5161d66cbac045f60cc4f1e852b98f8a67be8c06b39029b955636e8cac24c9fab69425b609fac19341c0a8f4b2274cd0f434b284f4ccde1ad6aa2 WHIRLPOOL b7d420623e92f02d4b2847013e341e00dae28a34491e0c74306f9e5d1cc1caa51347db64e6de02692022ed65d271f48865734fd8c494081668b126affcefe44b
-EBUILD ardour-3.9999.ebuild 2624 SHA256 e467e83574b0d370032883a1535318267827e4f71596750e06535f1f73d3cc7f SHA512 c738484842ad2daedee6b014bfbe36cf1baea85eb32bd8d73ea86c583dfdcb00139d7f5ad1acb6971370049096bd681e64ea5facf5bbaa41c2bed38de4266342 WHIRLPOOL 9c6fdeeaf86a2a0fe06a81516ba3ca26679ffbe064b5a9b1ba486b79a938a8dc994330db2006fb6abe28e320980ff884aeaf3b92f382bc037d9c2eede0070170
-MISC ChangeLog 8362 SHA256 f66a41b1a3fbf6ac650a248185dadde56bdcfe4f5830a7aeffadcbd15d93fe6a SHA512 4196b0c78814982847459ce9b34173348277d26972598093da0d19bbf86ba271d92956de8fe5bf8f611cf5c63632d031aa466130f2313bd13d11ab3020bd5ed2 WHIRLPOOL 1c425b344dd72ddc8227bd172a355068d66815fe8ef6c0cb2b9ae77b44a3234e80d031bd5ade4c849dc78e42d5ccab2128cfaf9efb7a0bf9d7f840c54b57dbf0
+EBUILD ardour-2.8.11.ebuild 3986 SHA256 9ed33cd63b93a5b01f292e2731d18218f4e30ad61bc257df3a8197ab3bd9f63a SHA512 ccee79ed102d4e02aec13b8522ab7602ad05145568b8714979bfc25f5ab7bc928c378dea4c4864093711f21750374a6bffeb9cacc9d5af9e81e0a61ab8bca4fa WHIRLPOOL 0d4daff0016d297a3bbc8fde1a52edc1da33448e0fa24f8c6294632c7f44f87408857b913c0e6d9fcc413068a32d0ea0666dff5edfd0325361a5ea64a89df36e
+EBUILD ardour-2.9999.ebuild 4015 SHA256 9e5408531e007759c81493be85c16837d194ca1a8700e0af05cb93b4017ed8cd SHA512 cac57aec0601df564056278e6c3005bf3cdc071f169a38d63f908991832e9fd766c0218bf3cb6c65b38d29c2219c3f175b548fcaca4cc2f52e4e4bc9866751b3 WHIRLPOOL 88612c659c8b1c69c3bf0f3c66acc1efdb7587150176249278faf01962c309741dc65e2efcc4b82dd9708259c02edbb20119177ad448ee4761cf8ebc5a2650e5
+EBUILD ardour-3.9999.ebuild 2625 SHA256 77cacd4cd0491f5df123f05edf0cba3438f7b68c1fd831cd8bd8b641202908d7 SHA512 f4a9f2f8988f433fdd4c839952fb56070bacc41ad72c0d0bb86e7e9cf1bda8f0196de83454197ab903466277b8115d85b2aef87ee99174e07f9c97f0e756dd82 WHIRLPOOL 9b119451578dda53342ded1475a3b2c827fef74f37c9720c687adb43baf9d5f5acdd0cf262ad7d4170fd95a5140a59ac6ac89442658f27ffb322201bfe2890da
+MISC ChangeLog 8578 SHA256 8a1f0ff30e0b33c4dffc99ac153fedf67faf9e99650201cdcf47e69290b98622 SHA512 dd479cc60879fa7e73f4aa0e3d2180770af3ad0dfb99ff1a17df9a3dc6967975858d9cae781c8f298016a9b72b9afa6a018be9537d157c18c1b0cd666465a6db WHIRLPOOL fe5fe79e8e9e1ca652ee186d2fac0042d5e8e705ee6710778d61caa52cd6689da8ac6e517322548c6d1c3429eee1d476c8cd1f10bceaac31445750c31e865a2a
 MISC metadata.xml 1203 SHA256 36ddbf8cbf691d641acadf8f4496bfcb8498f69a73995a602c9535a1c55b06a3 SHA512 39519d12055a77fd8309b5d143ffaa56819fd92df0931ba482814ef4f5f921465eb788d568846e1d5df4e645578547b290c0cdb9a8f577e7df887c5d005836b3 WHIRLPOOL a5875840292336b1f2ab81072dd89f0b87b124a790e63b222df09bde4479131699f4da36c3e576e721cf59f9e27829f5710d5b270ad1b6dfa21cb23fdc2af7fc
