@@ -93,7 +93,7 @@ src_install() {
 	waf-utils_src_install
 
 	newicon "icons/icon/ardour_icon_tango_48px_red.png" "ardour3.png"
-	make_desktop_entry "ardour3" "Ardour3" "ardour3" "AudioVideo;Audio"
+	make_desktop_entry "ardour3" "Ardour3" "ardour3" "AudioVideo;Audio;"
 }
 
 pkg_postinst() {
