@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Dec 2013; Dominique Michel <dominique.michel@users.sourceforge.net>
+  ardour-*.ebuild: add ; at the end of the category field into the
+  make_desktop_entry functions. This field is a list and must end with ;
+  
   09 Aug 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
   ardour-3.9999.ebuild, metadata.xml:
   Remove debug USE flag.
